Major changes to project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
-.DS_Store
-Mac.app
-MacRelease.app
-*.bc18
-battlecode.jar
-battlecode-2018.iml
-battlecode/
-battlecode-manager/
-run_nodocker.bat
-run_nodocker.sh
 .idea/
-index.html
-run.bat
 run.sh
-viewer_latest/
-install_viewer.py
-viewer_currentInstall.json
+.DS_Store
+battlecode.jar
+fufilGardenerRequest.iml
